added copyright notices

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,3 +1,15 @@
+#
+# Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+#
+# This software is licensed under the GNU General Public License
+# (version 3 or later). See the COPYING file in this distribution.
+#
+# You should have received a copy of the GNU Library General Public License
+# along with this software. If not, see <http://www.gnu.org/licenses/>.
+#
+# Authored by: Piotr Grabowski <fau999@gmail.com>
+#
+
 #Activator-generated Properties
 #Fri Sep 12 17:48:46 CEST 2014
 template.uuid=9d0f021d-ca8f-4a88-992f-f6468442419e
